# snippets

./: .gitignore  CMakeLists.txt  README.md
ceres/: CMakeLists.txt
ceres/ceres_autodiff/: CMakeLists.txt  ceres_autodiff_correct.cpp  ceres_autodiff_lidar_visual_fusion.cpp  ceres_autodiff_not_correct_but_same_result.cpp  ceres_autodiff_q1q2.cpp
ceres/ceres_curve_fitting/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  MyUtils.cpp  MyUtils.h
cpp/: CMakeLists.txt
cpp/src/: StdLib.cpp  StdLib.h  main.cpp  virtual.cpp  virtual.h
eigen/: CMakeLists.txt
eigen/src/: EigenCommon.h  RotationTransforms.cpp  RotationTransforms.h  SolveLinearEquation.cpp  SolveLinearEquation.h  TestQR.cpp  TestQR.h  main.cpp
interestingProject/: CMakeLists.txt
interestingProject/trackBall/: CMakeLists.txt
interestingProject/trackBall/src/: trackBall.cpp
opencv/: CMakeLists.txt
opencv/src/: img.cpp  img.h  kdtree.cpp  kdtree.h  main.cpp  ransac.cpp  ransac.h
slam14/: CMakeLists.txt
slam14/ch1/: Ax_b.cpp  CMakeLists.txt
slam14/ch10/g2o_custombundle/: g2o_bundle.cpp
slam14/ch2/: CMakeLists.txt
slam14/ch2/testHello/: CMakeLists.txt
slam14/ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
slam14/ch3/useEigen/include/: Hello.h
slam14/ch3/useEigen/src/: Hello.cpp
slam14/ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
slam14/ch3/visualizeGeometry/: CMakeLists.txt  visualizeGeometry.cpp
slam14/ch4/useSophus/: .useSophus.cpp.swp  CMakeLists.txt  useSophus.cpp
slam14/ch5/imageBasics/: imageBasics.cpp
slam14/ch5/joinMap/: CMakeLists.txt  joinMap.cpp
slam14/ch6/g2o_curve_fitting/: CMakeLists.txt
slam14/ch7/: CMakeLists.txt  extra.cpp  pose_estimation_2d2d.cpp
slam14/ch8/LKFlow/: useLK.cpp
slam14/ch8/directMethod/: direct_semidense.cpp  direct_sparse.cpp
